--- a/VPK/VPK.vcxproj
+++ b/VPK/VPK.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{aa6a0d73-6a7b-47d7-a9b0-1a9b1858ed46}</ProjectGuid>
-    <RootNamespace>BSPSource</RootNamespace>
+    <ProjectGuid>{e7b4e363-18a3-4376-a4d0-76c9d484ec5c}</ProjectGuid>
+    <RootNamespace>VPK</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,8 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="bsp.h" />
-    <ClInclude Include="vector.h" />
+    <ClInclude Include="vpk.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
