--- a/BSPSource/BSPSource.vcxproj
+++ b/BSPSource/BSPSource.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{aa6a0d73-6a7b-47d7-a9b0-1a9b1858ed46}</ProjectGuid>
     <RootNamespace>BSPSource</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>bsp</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -129,6 +130,9 @@
   <ItemGroup>
     <ClInclude Include="bsp.h" />
     <ClInclude Include="vector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
