--- a/VPK/VPK.vcxproj.filters
+++ b/VPK/VPK.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClInclude Include="vpk.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
 </Project>
